2003-07-10  Martin Willemoes Hansen

	* doc/web/team.xml : Modified my tasks a bit.

2003-07-01  Paolo Molaro <lupus@ximian.com>

	* acconfig.h, configure.in: added bundle support.

2003-06-10  Dick Porter  <dick@ximian.com>

	* acconfig.h:
	* configure.in: Check for struct ip_mreq if struct ip_mreqn isn't
	available.

2003-06-10  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Define HAVE_GC_GCJ_MALLOC for included libgc.

2003-06-10  Martin Baulig  <martin@ximian.com>

	* configure.in: Fall back to boehm if we don't have a libgc
	subdirectory.

2003-06-10  Martin Baulig  <martin@ximian.com>

	* configure.in: Make the libgc stuff actually work; we now create
	a shared libmonogc.so when using the included libgc.

2003-06-09  Martin Baulig  <martin@ximian.com>

	* configure.in: Only check for gc if --with-gc=boehm.

2003-06-08  Martin Baulig  <martin@ximian.com>

	* configure.in: Tell libgc's configure about our threads library.

2003-06-08  Martin Baulig  <martin@ximian.com>

	* libgc/: Integrate the libgc module here.

	[Note: A simple `cvs update' won't work this time; you either need
	to re-checkout the `mono' module or manually move the `libgc'
	module here.]

	* configure.in (--with-gc): Added `included' option to use the
	included libgc.  This is now also the default.
	(LIBGC_CFLAGS, LIBGC_LIBS): Put the libgc stuff here and AC_SUBST it.
	(INCLUDED_LIBGC): New automake conditional.
	(USE_INCLUDED_LIBGC): #define this if appropriate.

	* autogen.sh: Run libgc/autogen.sh.

	* Makefile.am (SUBDIRS): Added libgc.

2003-06-05  Duncan Mak  <duncan@ximian.com>

	* mono.spec.in (Requires): Add libxml2 and libxslt dependency on
	the package.

2003-05-19  Dick Porter  <dick@ximian.com>

	* configure.in: Netbsd build fix by marc@informatik.uni-bremen.de.

2003-05-10  Martin Willemoes Hansen <mwh@sysrq.dk>

	* scripts/Makefile.am: Added monoresgen secutil sqlsharp
	  shell wrapper scripts.

2003-05-08  Zoltan Varga  <vargaz@freemail.hu>

	* mono/tests/Makefile.am: 